# b2t

./: .gitattributes  .gitignore  CLAUDE.md  CODEBASE_GUIDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-03-v0-pipeline.md  2026-06-04-model-dropdown.md  2026-06-04-progress-graph.md  2026-06-04-testing-frontend.md  2026-06-04-typst-editor-recompile.md  2026-06-05-open-source-models.md  2026-06-10-graph-prompt-preview.md  2026-06-10-prompt-versioning.md  2026-06-10-state-inspector-readability.md  2026-06-10-state-inspector.md  2026-06-16-hitl-review.md  2026-06-16-per-frame-conversion.md  2026-06-20-appendix-handling.md
docs/superpowers/specs/: 2026-06-03-v0-pipeline-design.md  2026-06-04-model-dropdown-design.md  2026-06-04-progress-graph-design.md  (+10 more)
files/reference/: touying_reference_presentation.typ
prompts/: defaults.json
prompts/convert/: v1.toml  v2.toml  v3.toml  v4.toml
src/b2t/: __init__.py  app.py  config.py  graph.py  llm.py  log.py  prompts.py  state.py  typst_images.py  typst_output.py  typst_runner.py  typst_scaffold.py
src/b2t/api/: app.py  (+4 more)
tests/: conftest.py  test_api_app.py  test_api_jobs.py  test_api_schemas.py  test_aspect.py  test_cleanup.py  test_config.py  test_detect.py  test_flatten.py  test_graph.py  test_includes.py  test_llm.py  test_llm_node.py  test_log.py  test_nodes.py  test_overlays.py  test_prompts.py  test_scaffold.py  test_split.py  test_state.py  test_state_view.py  test_typst_images.py  test_typst_output.py  test_typst_runner.py
tests/fixtures/: overlay_snippet.tex
(+79 files in other folders)
