[project]
name = "b2t"
version = "0.1.0"
description = "Convert compiled Beamer decks into accessible Typst Touying PDFs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "openai>=2.40.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/b2t"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require the typst binary",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
